# kaggle

./: .gitignore  README.md  pyproject.toml  requirement.txt
competitions/digit_recognizer/: README.md  cnn.ipynb  digit_mean.ipynb
competitions/predict_co2_emissions_in_rwanda/: main.py  scratch.ipynb
competitions/spaceship_titanic/: README.md  attempt_2.ipynb  final.ipynb  initial.ipynb
competitions/store_sales/: README.md  initial.ipynb
