[tool.poetry]
name = "kaggle-competitions"
version = "0.1.0"
description = ""
authors = ["Kyle Henderson <ona@lunch.run>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
wandb = "^0.15.8"
lightning = "^2.0.7"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
kaggle = "^1.5.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
